fix expiry with minimal display ports
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
In RemoveDisplayPortCallback
we don't remove a regular display port and instill a minimal display port if mIsScrollParent is true on the scroll frame. mIsScrollParent gets set to true if any child scroll frame has a display port of any time (minimal or otherwise).
We want to expire a regular display port and replace it with a minimal display port if it only contains minimal display ports (or no display ports).
This was caught while I was updating gfx/layers/apz/test/mochitest/test_layerization.html for the new activate all scroll frames code (bug 1691878).
| Assignee | ||
Comment 1•5 years ago
|
||
In RemoveDisplayPortCallback
we don't remove a regular display port and instill a minimal display port if mIsScrollParent is true on the scroll frame. mIsScrollParent gets set to true if any child scroll frame has a display port of any time (minimal or otherwise).
We want to expire a regular display port and replace it with a minimal display port if it only contains minimal display ports (or no display ports).
This was caught while I was updating gfx/layers/apz/test/mochitest/test_layerization.html for the new activate all scroll frames code (bug 1691878).
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1690433
Comment 4•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•