Bug 1691879. Fix expiry with minimal display ports. r=botond

In RemoveDisplayPortCallback

https://searchfox.org/mozilla-central/rev/7067bbd8194f4346ec59d77c33cd88f06763e090/layout/generic/nsGfxScrollFrame.cpp#2588

we don't remove a regular display port and install a minimal display port if mIsScrollParent is true on the scroll frame. mIsScrollParent gets set to true if any child scroll frame has a display port of any time (minimal or otherwise).

We want to expire a regular display port and replace it with a minimal display port if it only contains minimal display ports (or no display ports).

This was caught while I was updating gfx/layers/apz/test/mochitest/test_layerization.html for the new activate all scroll frames code (bug 1691878).

Differential Revision: https://phabricator.services.mozilla.com/D104648